apiparams: fix collapse title padding (#941)

--- a/znai-reactjs/src/doc-elements/api/ApiParameters.css
+++ b/znai-reactjs/src/doc-elements/api/ApiParameters.css
@@ -110,7 +110,7 @@
 
 .znai-api-parameters-collapse-toggle {
     color: var(--znai-expand-collaps-color);
-    padding: 4px;
+    padding: 0 4px;
     width: 12px;
 
     user-select: none;
